log
Thu, Mar 20, 2025  5:15:04 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Thu, Mar 20, 2025  5:50:56 PM: 
 exercises.c | 24 ++++++++++++++++++++++--
 1 file changed, 22 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:99:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '}' token
 }
 ^
exercises.c:97:11: error: unused variable 'Paux' [-Werror=unused-variable]
    Stack* Paux = create_stack();
           ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
04d4d81
Thu, Mar 20, 2025  5:57:32 PM: 
 exercises.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
test.c: In function 'test_elimina_elemento':
test.c:132:5: error: implicit declaration of function 'eliminaElementos' [-Werror=implicit-function-declaration]
     eliminaElementos(L, elem);
     ^~~~~~~~~~~~~~~~
test.c: In function 'test_copia_pila':
test.c:175:5: error: implicit declaration of function 'copia_pila' [-Werror=implicit-function-declaration]
     copia_pila(P1, P2);
     ^~~~~~~~~~
test.c: In function 'test_parentesis_balanceados':
test.c:217:9: error: implicit declaration of function 'parentesisBalanceados' [-Werror=implicit-function-declaration]
     if(!parentesisBalanceados(s)){
         ^~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
709ca44
Thu, Mar 20, 2025  5:59:11 PM: 
 exercises.c | 43 -------------------------------------------
 1 file changed, 43 deletions(-)
test.c: In function 'test_elimina_elemento':
test.c:132:5: error: implicit declaration of function 'eliminaElementos' [-Werror=implicit-function-declaration]
     eliminaElementos(L, elem);
     ^~~~~~~~~~~~~~~~
test.c: In function 'test_copia_pila':
test.c:175:5: error: implicit declaration of function 'copia_pila' [-Werror=implicit-function-declaration]
     copia_pila(P1, P2);
     ^~~~~~~~~~
test.c: In function 'test_parentesis_balanceados':
test.c:217:9: error: implicit declaration of function 'parentesisBalanceados' [-Werror=implicit-function-declaration]
     if(!parentesisBalanceados(s)){
         ^~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
cbea990
Thu, Mar 20, 2025  6:01:22 PM: 
 exercises.c | 33 +++++++++++++++++++++++++++++++++
 1 file changed, 33 insertions(+)
 tests:  2|3
total_score: 20/70
f161c25
Thu, Mar 20, 2025  6:03:44 PM: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|2
total_score: 40/70
8833b6c
Sat, Mar 22, 2025 12:38:58 PM: 
 exercises.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:98:18: error: implicit declaration of function 'createStack' [-Werror=implicit-function-declaration]
    Stack* Paux = createStack();
                  ^~~~~~~~~~~
exercises.c:98:18: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
exercises.c:101:7: error: dereferencing 'void *' pointer [-Werror]
       *dato = top(P1);
       ^~~~~
exercises.c:101:7: error: invalid use of void expression
       *dato = top(P1);
       ^
exercises.c:106:7: error: dereferencing 'void *' pointer [-Werror]
       *dato = top(Paux);
       ^~~~~
exercises.c:106:7: error: invalid use of void expression
       *dato = top(Paux);
       ^
cc1.exe: all warnings being treated as errors
Compilation failed
25785ea
Sat, Mar 22, 2025 12:39:17 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:98:18: error: implicit declaration of function 'createStack' [-Werror=implicit-function-declaration]
    Stack* Paux = createStack();
                  ^~~~~~~~~~~
exercises.c:98:18: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
cc1.exe: all warnings being treated as errors
Compilation failed
72bb8a2
Sat, Mar 22, 2025 12:39:53 PM: 
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:98:18: error: implicit declaration of function 'createStack' [-Werror=implicit-function-declaration]
    Stack* Paux = createStack();
                  ^~~~~~~~~~~
exercises.c:98:18: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
cc1.exe: all warnings being treated as errors
Compilation failed
86b6603
Sat, Mar 22, 2025 12:41:16 PM: 
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:98:18: error: implicit declaration of function 'createStack' [-Werror=implicit-function-declaration]
    Stack* Paux = createStack();
                  ^~~~~~~~~~~
exercises.c:98:18: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
cc1.exe: all warnings being treated as errors
Compilation failed
70b68af
